we got a stable build again babyyyy