@@ -2,30 +2,32 @@ package object;
 
 import property.Terrain;
 import game.Control;
-import game.Game;
+import game.Manager;
 import org.joml.Math;
 import org.joml.Matrix4f;
 import org.joml.Quaternionf;
 import org.joml.Vector3f;
-import property.Machine;
+import component.Machine;
+
+import java.util.List;
 
 import static org.lwjgl.glfw.GLFW.*;
 
 public class Camera implements Machine {
 
     public static final Matrix4f projection = new Matrix4f();
-    public static final Matrix4f view       = new Matrix4f();
+    public static final Matrix4f view = new Matrix4f();
     private static final Matrix4f viewBuffer = new Matrix4f();
 
-    public static final Quaternionf orientation     = new Quaternionf();
-    public static final Vector3f    rotation        = new Vector3f(0, 0, 0);
-    public static final Vector3f    position        = new Vector3f(0, 1f, 1.5f);
+    public static final Quaternionf orientation = new Quaternionf();
+    public static final Vector3f rotation = new Vector3f(0, 0, 0);
+    public static final Vector3f position = new Vector3f(0, 1f, 1.5f);
 
-    public static final float SPEED = 2f / Game.RATE;
-    public static final float SENS  = 10f / Game.RATE;
+    public static final float SPEED = 2f / Manager.RATE;
+    public static final float SENS = 10f / Manager.RATE;
     public static final float SLOPE = 0.7071f;
-    public static final float NEAR  = 0.1f;
-    public static final float FAR   = Byte.MAX_VALUE;
+    public static final float NEAR = 0.1f;
+    public static final float FAR = Byte.MAX_VALUE;
 
     public static float FOV = 75;
 
@@ -39,41 +41,42 @@ public class Camera implements Machine {
     }
 
     public static void update() {
-        if (glfwGetInputMode(Game.window, GLFW_CURSOR) == GLFW_CURSOR_DISABLED) {
-            rotation.add(0, Control.dx() * -SENS, 0);
-            rotation.add(Control.dy() * -SENS, 0, 0);
-            rotation.x = Math.min(Math.max(rotation.x, -80), 80);
-            Vector3f forward = new Vector3f(forward().x, 0, forward().z).normalize();
-            Vector3f origin = new Vector3f(position);
-            Vector3f movement = new Vector3f();
-            if (Control.isKeyDown(GLFW_KEY_W) || Control.isKeyDown(GLFW_KEY_UP)) {
-                movement.add(forward.x * -SPEED, 0, forward.z * -SPEED);
+        if (glfwGetInputMode(Manager.window, GLFW_CURSOR) != GLFW_CURSOR_DISABLED) {
+            FOV = Math.clamp(75, 90, FOV - (20f / Manager.RATE));
+            return;
+        }
+        rotation.add(0, Control.dx() * -SENS, 0);
+        rotation.add(Control.dy() * -SENS, 0, 0);
+        rotation.x = Math.min(Math.max(rotation.x, -80), 80);
+        Vector3f forward = new Vector3f(forward().x, 0, forward().z).normalize();
+        Vector3f origin = new Vector3f(position);
+        Vector3f movement = new Vector3f();
+        if (Control.isKeyDown(GLFW_KEY_W) || Control.isKeyDown(GLFW_KEY_UP)) {
+            movement.add(forward.x * -SPEED, 0, forward.z * -SPEED);
+        }
+        if (Control.isKeyDown(GLFW_KEY_S) || Control.isKeyDown(GLFW_KEY_DOWN)) {
+            movement.add(forward.x * SPEED, 0, forward.z * SPEED);
+        }
+        if (Control.isKeyDown(GLFW_KEY_D) || Control.isKeyDown(GLFW_KEY_RIGHT)) {
+            movement.add(forward.z * SPEED, 0, forward.x * -SPEED);
+        }
+        if (Control.isKeyDown(GLFW_KEY_A) || Control.isKeyDown(GLFW_KEY_LEFT)) {
+            movement.add(forward.z * -SPEED, 0, forward.x * SPEED);
+        }
+        Terrain terrain = Manager.scene.terrain;
+        if (terrain == null) return;
+        Vector3f position = terrain.height(origin, new Vector3f(movement));
+        Camera.position.set(position);
+        if (movement.length() > 0 && !position.equals(origin)) {
+            if (bob <= 0.0f) {
+                bob = 360.0f;
+            } else {
+                bob -= 7.5f;
             }
-            if (Control.isKeyDown(GLFW_KEY_S) || Control.isKeyDown(GLFW_KEY_DOWN)) {
-                movement.add(forward.x * SPEED, 0, forward.z * SPEED);
-            }
-            if (Control.isKeyDown(GLFW_KEY_D) || Control.isKeyDown(GLFW_KEY_RIGHT)) {
-                movement.add(forward.z * SPEED, 0, forward.x * -SPEED);
-            }
-            if (Control.isKeyDown(GLFW_KEY_A) || Control.isKeyDown(GLFW_KEY_LEFT)) {
-                movement.add(forward.z * -SPEED, 0, forward.x * SPEED);
-            }
-            Terrain terrain = Game.scene.getEntities(Terrain.class).getFirst();
-            if (terrain.terrain.loaded) {
-                Vector3f position = terrain.height(origin, new Vector3f(movement));
-                Camera.position.set(position);
-                if (movement.length() > 0 && !position.equals(origin)) {
-                    if (bob <= 0.0f) {
-                        bob = 360.0f;
-                    } else {
-                        bob -= 7.5f;
-                    }
-                    Camera.position.y += Math.sin(Math.toRadians(bob)) / 30.0f;
-                    FOV = Math.clamp(75, 90, FOV + (20f / Game.RATE));
-                } else {
-                    FOV = Math.clamp(75, 90, FOV - (20f / Game.RATE));
-                }
-            }
+            Camera.position.y += Math.sin(Math.toRadians(bob)) / 30.0f;
+            FOV = Math.clamp(75, 90, FOV + (20f / Manager.RATE));
+        } else {
+            FOV = Math.clamp(75, 90, FOV - (20f / Manager.RATE));
         }
     }
 
@@ -101,12 +104,12 @@ public class Camera implements Machine {
     }
 
     public static void projection() {
-        projection.identity().perspective(Math.toRadians(Camera.FOV), (float) Game.WIDTH / (float) Game.HEIGHT, NEAR, FAR);
+        projection.identity().perspective(Math.toRadians(Camera.FOV), (float) Manager.WIDTH / (float) Manager.HEIGHT, NEAR, FAR);
     }
 
     public static void listen() {
         Camera camera = new Camera();
-        camera.start(Game.RATE * 2);
+        camera.start(Manager.RATE * 2);
     }
 
     private static void rot(float x, float y, float z, double angle) {
